# nvglances

./: Cargo.toml  README.md
src/: app.rs  main.rs  types.rs
src/metrics/: gpu.rs  mod.rs  system.rs
src/ui/: dialogs.rs  footer.rs  gpu.rs  graphs.rs  header.rs  layout.rs  mod.rs  processes.rs  system.rs
