[package]
name = "nvglances"
version = "0.1.0"
edition = "2021"
description = "glances + nvitop = nvglances"
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# System metrics
sysinfo = "0.32"

# NVIDIA GPU support
nvml-wrapper = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = "0.4"

# Human-readable formatting
humansize = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
