[package]
name = "nvglances"
version = "0.1.2"
edition = "2021"
description = "A TUI system monitor with support for NVIDIA GPUs (CUDA/NVML) and Apple Silicon GPUs (Metal)"
license = "MIT"
repository = "https://github.com/EricLBuehler/nvglances"
keywords = ["monitoring", "gpu", "nvidia", "metal", "apple-silicon"]
categories = ["command-line-utilities", "development-tools::profiling"]

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# System metrics
sysinfo = "0.32"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = "0.4"

# Human-readable formatting
humansize = "2"

# NVIDIA GPU support (Linux/Windows)
[target.'cfg(not(target_os = "macos"))'.dependencies]
nvml-wrapper = "0.10"

# Metal GPU support (macOS)
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.31"
core-foundation = "0.10"
objc2 = "0.6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
